--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "laravelpkg/laravelchk",
+    "name": "laravelpkg/laravelchk_tech",
     "type": "library",
     "license": "MIT",
     "minimum-stability": "dev",
